# olympiads

./: .gitignore  readme.md
Bor/A/: main.cpp
SHSE/A/: main.cpp
artur/A_C++/: main.cpp
bin_search/approximate_binary_search/: CMakeLists.txt  main.cpp
bin_search/chess_travel/: CMakeLists.txt  main.cpp
bin_search/cows/: CMakeLists.txt  main.cpp
bin_search/deforestation/: CMakeLists.txt  main.cpp
bin_search/label_collecting/: CMakeLists.txt  main.cpp
bin_search/m_del/: CMakeLists.txt  main.cpp
bin_search/mass_sort/: CMakeLists.txt  main.cpp
bin_search/space_colony/: CMakeLists.txt  main.cpp
bin_search/very_easy_ex/: CMakeLists.txt  main.cpp
bin_search/wire/: CMakeLists.txt  main.cpp
codeforces/edu_cf_round_146/: CMakeLists.txt  main.cpp
combine_objs/bin_n_k/: CMakeLists.txt  main.cpp
combine_objs/bin_strs/: CMakeLists.txt  main.cpp
contest100044/AC++/: main.cpp
contest343850/AC++/: .gitignore  CMakeLists.txt  main.cpp
contest343850/BC++/: CMakeLists.txt  main.cpp
contest343850/CC++/: main.cpp
contest343850/DC++/: CMakeLists.txt  main.cpp
dima/A_Python/: A.py  B.py  main.py  return.db  stolen.json  truth_lie.txt
gazprom/A_Python/: main.py
gazprom/C_Python/: main.py
gazprom/D_Python/: main.py
gazprom/E_C++/: main.cpp
graphs/A/: main.cpp
hh-ru-course/task-1/: main.py
hh-ru-course/task-1-js/: index.js  package.json
hh-ru-course/task-2/: main.py
itmo_info_2023_zakl/: CMakeLists.txt  main.cpp
temp_C++/: main.cpp  out_file.txt  out_file_1.txt
temp_python/: main.py
tinkoff/exam/math-info/4/: CMakeLists.txt  main.cpp
(+1649 files in other folders)
